[package]
name = "gift-escrow"
version = "0.1.0"
edition = "2021"
authors = ["GiftINJ"]
license = "Apache-2.0"
repository = "https://example.com/giftinj"
description = "CosmWasm escrow contract for GiftINJ crypto gift cards on Injective"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.5"
cosmwasm-schema = "1.5"
cw-storage-plus = "1.2"
thiserror = "1.0"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
cosmwasm-schema = "1.5"

